--- a/index.html
+++ b/index.html
@@ -57,50 +57,54 @@
             <h2>A Gallery of Field & Feast</h2>
             <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
-            <figure>
-                <img src="images/tomatoes-600w.jpg" srcset="images/tomatoes-200w.jpg 1200w,
-                images/tomatoes-300w.jpg 900w, images/tomatoes-600w.jpg 600w" sizes="(min-width: 1200px) 200px, (min-width: 900px) 300px, 600px" alt="Vibrant heirloom tomatoes at peak ripeness">
-                <!-- I am not confident for whats above and will try and decipher how to do this again tomorrow after more sleep, how did you know how to set 1200w for the 200w image? are my size attributes correct? not exactly sure how to determine this again, these numbers were provided in the lessons i believe, so not sure how to manually figure out but ill look again and try tomorrow but any advice on how to figure out what these numbers are or should be, would be appreciated so I can confidently keep moving forward in my css -->
-                <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
-            </figure>
-            
-            <figure>
-                <img src="images/olive-oil-600w.jpg" alt="Olives stacked in a shallow wooden bowl on what appears to be a cutting board and one olive in a wooden spoon is also on the cutting board as well">
-                <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
-            </figure>
+            <div>
+                <figure>
+                    <img src="images/tomatoes-600w.jpg" srcset="images/tomatoes-200w.jpg 1200w,
+                    images/tomatoes-300w.jpg 900w, images/tomatoes-600w.jpg 600w" sizes="(min-width: 1200px) 200px, (min-width: 900px) 300px, 600px" alt="Vibrant heirloom tomatoes at peak ripeness">
+                    <!-- I am not confident for whats above and will try and decipher how to do this again tomorrow after more sleep, how did you know how to set 1200w for the 200w image? are my size attributes correct? not exactly sure how to determine this again, these numbers were provided in the lessons i believe, so not sure how to manually figure out but ill look again and try tomorrow but any advice on how to figure out what these numbers are or should be, would be appreciated so I can confidently keep moving forward in my css -->
+                    <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
+                </figure>
+                
+                <figure>
+                    <img src="images/olive-oil-600w.jpg" alt="Olives stacked in a shallow wooden bowl on what appears to be a cutting board and one olive in a wooden spoon is also on the cutting board as well">
+                    <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
+                </figure>
 
-            <figure>
-                <img src="images/table-setting-600w.jpg" alt="Their is a decorative centerpiece on a table with a candle, leaves and cups and a blurred out background of more things on the table">
-                <figcaption>Elegant tablescape under the evening sky.</figcaption>
-            </figure>
+                <figure>
+                    <img src="images/table-setting-600w.jpg" alt="Their is a decorative centerpiece on a table with a candle, leaves and cups and a blurred out background of more things on the table">
+                    <figcaption>Elegant tablescape under the evening sky.</figcaption>
+                </figure>
 
-            <figure>
-                <img src="images/chef-plating-600w.jpg" alt="A chef in a vertical striped apron plates a dish that appears to look like some kind of panini sandwich on a baguette">
-                <figcaption>Artful plating with seasonal ingredients.</figcaption>
-            </figure>
+                <figure>
+                    <img src="images/chef-plating-600w.jpg" alt="A chef in a vertical striped apron plates a dish that appears to look like some kind of panini sandwich on a baguette">
+                    <figcaption>Artful plating with seasonal ingredients.</figcaption>
+                </figure>
 
-            <figure>
-                <img src="images/basket-600w.jpg" alt="There is one basket of potatoes, one basket of cherry tomatoes and one basket of leafy greens in various sizes of wooden wicker baskets">
-                <figcaption>Our monthly basket, curated with care.</figcaption>
-            </figure>
+                <figure>
+                    <img src="images/basket-600w.jpg" alt="There is one basket of potatoes, one basket of cherry tomatoes and one basket of leafy greens in various sizes of wooden wicker baskets">
+                    <figcaption>Our monthly basket, curated with care.</figcaption>
+                </figure>
+            </div>
 
             <a href="#">View Our Full Gallery</a>
         </section>
     </main>
 
     <footer>
-        <div>
+        <section>
+            <h2>Visit Us</h2>
             <address>
                 123 Estate Lane, Wine Country, CA<br>
                 <a href="tel:555-123-4567">(555) 123-4567</a><br>
                 <a href="mailto:hello@fieldandfeast.com">hello@fieldandfeast.com</a>
             </address>
-        </div>
+        </section>
 
-        <div>
+        <section>
+            <h2>Follow Us</h2>
             <a href="#">Instagram</a> 
             <a href="#">Facebook</a>
-        </div>
+        </section>
     </footer>
 
 </body>
