created classes to try and style img and figcaption
It hasn't worked yet but I wanted to take a break and push my code up since my computer has been having battery issues  so i don't lose any progress.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 </ul>
                 <p>Elevate your home dining with the finest farm-to-table offerings, elegantly packaged and delivered with care.</p>
             </section>
+            <hr>
         </section>
         
 
@@ -59,8 +60,8 @@
             <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
             <div>
-                <figure>
-                    <img 
+                <figure class="group">
+                    <img class="image-and-caption-top"
                         src="images/tomatoes-600w.jpg" 
                         srcset="images/tomatoes-200w.jpg 1200w,
                                 images/tomatoes-300w.jpg 900w, 
@@ -69,11 +70,11 @@
                                (min-width: 900px) 300px, 
                                 600px" 
                         alt="Vibrant heirloom tomatoes at peak ripeness">
-                        <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
+                        <figcaption class="image-and-caption-bottom">Heirloom tomatoes at peak ripeness.</figcaption>
                 </figure>
                 
                 <figure>
-                    <img 
+                    <img class="image-and-caption-top"
                         src="images/olive-oil-600w.jpg" 
                         srcset="images/olive-oil-200w.jpg 1200w,
                                 images/olive-oil-300w.jpg 900w,
@@ -126,6 +127,7 @@
             </div>
 
             <a href="#">View Our Full Gallery</a>
+            <hr>
         </section>
     </main>
 
