added more classes to figure tags and images

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
             <div>
                 <figure class="group">
-                    <img class="image-and-caption-top"
+                    <img        
+                        class="image-and-caption-top"
                         src="images/tomatoes-600w.jpg" 
                         srcset="images/tomatoes-200w.jpg 1200w,
                                 images/tomatoes-300w.jpg 900w, 
@@ -73,8 +74,9 @@
                         <figcaption class="image-and-caption-bottom">Heirloom tomatoes at peak ripeness.</figcaption>
                 </figure>
                 
-                <figure>
-                    <img class="image-and-caption-top"
+                <figure class="group">
+                    <img 
+                        class="image-and-caption-top"
                         src="images/olive-oil-600w.jpg" 
                         srcset="images/olive-oil-200w.jpg 1200w,
                                 images/olive-oil-300w.jpg 900w,
@@ -86,8 +88,9 @@
                         <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
                 </figure>
 
-                <figure>
+                <figure class="group">
                     <img 
+                        class="image-and-caption-top"
                         src="images/table-setting-600w.jpg" 
                         srcset="images/table-setting-200w.jpg 1200w,
                                 images/table-setting-300w.jpg 900w,
@@ -99,8 +102,9 @@
                         <figcaption>Elegant tablescape under the evening sky.</figcaption>
                 </figure>
 
-                <figure>
+                <figure class="group">
                     <img 
+                        class="image-and-caption-top"
                         src="images/chef-plating-600w.jpg" 
                         srcset="images/chef-plating-200w.jpg 1200w,
                                 images/chef-plating-300w.jpg 900w,
@@ -112,8 +116,9 @@
                         <figcaption>Artful plating with seasonal ingredients.</figcaption>
                 </figure>
 
-                <figure>
+                <figure class="group">
                     <img 
+                        class="image-and-caption-top"
                         src="images/basket-600w.jpg" 
                         srcset="images/basket-200w.jpg 1200w,
                                 images/basket-300w.jpg 900w,
