--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
             <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
             <div>
-                <figure class="group">
+                <figure class="image-and-caption">
                     <img        
-                        class="image-and-caption-top"
                         src="images/tomatoes-600w.jpg" 
                         srcset="images/tomatoes-200w.jpg 1200w,
                                 images/tomatoes-300w.jpg 900w, 
@@ -71,12 +70,11 @@
                                (min-width: 900px) 300px, 
                                 600px" 
                         alt="Vibrant heirloom tomatoes at peak ripeness">
-                        <figcaption class="image-and-caption-bottom">Heirloom tomatoes at peak ripeness.</figcaption>
+                        <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
                 </figure>
                 
-                <figure class="group">
+                <figure class="image-and-caption">
                     <img 
-                        class="image-and-caption-top"
                         src="images/olive-oil-600w.jpg" 
                         srcset="images/olive-oil-200w.jpg 1200w,
                                 images/olive-oil-300w.jpg 900w,
@@ -88,9 +86,8 @@
                         <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
                 </figure>
 
-                <figure class="group">
+                <figure class="image-and-caption">
                     <img 
-                        class="image-and-caption-top"
                         src="images/table-setting-600w.jpg" 
                         srcset="images/table-setting-200w.jpg 1200w,
                                 images/table-setting-300w.jpg 900w,
@@ -102,7 +99,7 @@
                         <figcaption>Elegant tablescape under the evening sky.</figcaption>
                 </figure>
 
-                <figure class="group">
+                <figure class="image-and-caption">
                     <img 
                         class="image-and-caption-top"
                         src="images/chef-plating-600w.jpg" 
@@ -116,9 +113,8 @@
                         <figcaption>Artful plating with seasonal ingredients.</figcaption>
                 </figure>
 
-                <figure class="group">
+                <figure class="image-and-caption">
                     <img 
-                        class="image-and-caption-top"
                         src="images/basket-600w.jpg" 
                         srcset="images/basket-200w.jpg 1200w,
                                 images/basket-300w.jpg 900w,
