--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
             <address>
                 123 Estate Lane, Wine Country, CA<br>
                 <a href="tel:555-123-4567">(555) 123-4567</a><br>
-                <a href="mailto:hello@fieldandfeast.com">hello@fieldandfeast.com</a>
+                <a href="mailto:hello@fieldandfeast.com" class="email">hello@fieldandfeast.com</a>
             </address>
         </div>
 
-        <div>
+        <div id="social-media">
             <a href="#">Instagram</a> 
             <a href="#">Facebook</a>
         </div>
