updated png image and added id
Updated png since it doesn't need to resize and added id to anchor so I could center it.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
 </head>
 <body>
     <header>
-        <img 
-            src="images/fieldandfeast-logo.png" 
-            srcset="images/fieldandfeast-logo.png 1200w,
-                    images/fieldandfeast-logo.png 900w, 
-                    images/fieldandfeast-logo.png 600w" 
-            sizes="(min-width: 1200px) 200px, 
-                   (min-width: 900px) 300px, 
-                   600px"
-        alt="Field and feast logo of an olive branch in gold against a white background and a midnight blue border">
+        <img src="images/fieldandfeast-logo.png" alt="Field and feast logo of an olive branch in gold against a white background and a midnight blue border">
         <h1>Field & Feast</h1>
         <p>Harvested with Care, Served with Elegance</p>
     </header>
@@ -135,7 +127,7 @@
                 </figure>
             </div>
 
-            <a href="#">View Our Full Gallery</a>
+            <a href="#" id="gallery-anchor">View Our Full Gallery</a>
             <hr>
         </section>
     </main>
