working on css to format the mobile so it resizes correctly
The goal is no horizontal scroll bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/fieldandfeast-logo.png" alt="Field and feast logo of an olive branch in gold against a white background and a midnight blue border">
+        <img src="images/fieldandfeast-logo.png" width="200px" alt="Field and feast logo of an olive branch in gold against a white background and a midnight blue border">
         <h1>Field & Feast</h1>
         <p>Harvested with Care, Served with Elegance</p>
     </header>
@@ -59,7 +59,7 @@
             <h2>A Gallery of Field & Feast</h2>
             <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
-            <div>
+            <div id="images">
                 <figure class="image-and-caption">
                     <img        
                         src="images/tomatoes-600w.jpg" 
