--- a/index.html
+++ b/index.html
@@ -26,22 +26,23 @@
         <section>
             <h2 id="first-h2">Welcome to Field & Feast</h2>
             <p>At Field & Feast, we believe that the finest meals begin at the source. Rooted in tradition yet refined for the modern palate, our farm-to-table philosophy celebrates the beauty of seasonality, sustainability, and craftsmanship. From the sun-drenched fields where our produce is grown to the artfully curated dishes we serve, every detail is designed to bring you an experience of unparalleled quality and flavor.</p>
-            <hr>
         </section>
 
-        <section>
-            <h2>Our Offerings</h2>
-            <section class="green-container">
+        <hr>
+
+        <section class="offerings-container">
+            <h2 id="our-offerings-title">Our Offerings</h2>
+            <section class="green-container" id="artisan-provisions">
                 <h3>Artisan Provisions</h3>
                 <p>Hand-selected, seasonal ingredients sourced from our estate farm and trusted local growers. Each item is chosen for its freshness, flavor, and integrity.</p>
             </section>
 
-            <section class="green-container">
+            <section class="green-container" id="exclusive-dining-experience">
                 <h3>Exclusive Dining Experiences</h3>
                 <p>Join us for intimate chef-led tastings and farm-to-table feasts, where carefully crafted menus highlight the best of the season.</p>
             </section>
 
-            <section class="green-container">
+            <section class="green-container" id="the-field-and-feast-monthly-basket">
                 <h3>The Field & Feast Monthly Basket</h3>
                 <p>Experience a curated selection of premium seasonal ingredients delivered to your doorstep each month.</p>
                 <ul>
@@ -51,8 +52,9 @@
                 </ul>
                 <p>Elevate your home dining with the finest farm-to-table offerings, elegantly packaged and delivered with care.</p>
             </section>
-            <hr>
         </section>
+
+        <hr>
         
 
         <section>
@@ -128,8 +130,10 @@
             </div>
 
             <a href="#" id="gallery-anchor">View Our Full Gallery</a>
-            <hr>
         </section>
+
+        <hr>
+        
     </main>
 
     <footer>
