--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
             <div id="images">
-                <figure class="image-and-caption">
+                <figure class="image-and-caption" id="tomatoes">
                     <img        
                         src="images/tomatoes-600w.jpg" 
                         srcset="images/tomatoes-200w.jpg 1200w,
@@ -75,7 +75,7 @@
                         <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
                 </figure>
                 
-                <figure class="image-and-caption">
+                <figure class="image-and-caption" id="olive-oil">
                     <img 
                         src="images/olive-oil-600w.jpg" 
                         srcset="images/olive-oil-200w.jpg 1200w,
@@ -88,7 +88,7 @@
                         <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
                 </figure>
 
-                <figure class="image-and-caption">
+                <figure class="image-and-caption" id="table-setting">
                     <img 
                         src="images/table-setting-600w.jpg" 
                         srcset="images/table-setting-200w.jpg 1200w,
@@ -101,9 +101,9 @@
                         <figcaption>Elegant tablescape under the evening sky.</figcaption>
                 </figure>
 
-                <figure class="image-and-caption">
+                <figure class="image-and-caption" id="chef-plating">
                     <img 
-                        class="image-and-caption-top"
+                        class="image-and-caption"
                         src="images/chef-plating-600w.jpg" 
                         srcset="images/chef-plating-200w.jpg 1200w,
                                 images/chef-plating-300w.jpg 900w,
@@ -115,7 +115,7 @@
                         <figcaption>Artful plating with seasonal ingredients.</figcaption>
                 </figure>
 
-                <figure class="image-and-caption">
+                <figure class="image-and-caption" id="basket">
                     <img 
                         src="images/basket-600w.jpg" 
                         srcset="images/basket-200w.jpg 1200w,
@@ -133,7 +133,7 @@
         </section>
 
         <hr>
-        
+
     </main>
 
     <footer>
