Fixed 2nd grid css for tablet size
It needed a placeholder for the empty spot in the grid to render correctly

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/fieldandfeast-logo.png" width="200px" alt="Field and feast logo of an olive branch in gold against a white background and a midnight blue border">
+        <img src="images/fieldandfeast-logo.png" width="200" alt="Field and feast logo of an olive branch in gold against a white background and a midnight blue border">
         <h1>Field & Feast</h1>
         <p>Harvested with Care, Served with Elegance</p>
     </header>
