fine tuning css to match mockup and adding span tag
Added span tag so there would be a word break for the medium and large screensizes

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <section class="offerings-container">
             <h2 id="our-offerings-title">Our Offerings</h2>
             <section class="green-container" id="artisan-provisions">
-                <h3>Artisan Provisions</h3>
+                <h3>Artisan <span class="break-word">Provisions</span></h3>
                 <p>Hand-selected, seasonal ingredients sourced from our estate farm and trusted local growers. Each item is chosen for its freshness, flavor, and integrity.</p>
             </section>
 
             <section class="green-container" id="exclusive-dining-experience">
-                <h3>Exclusive Dining Experiences</h3>
+                <h3>Exclusive Dining <span class="break-word">Experiences</span></h3>
                 <p>Join us for intimate chef-led tastings and farm-to-table feasts, where carefully crafted menus highlight the best of the season.</p>
             </section>
 
