cut unnecessary grid-area from images and unecessary ids
also adjusted css to match mockups

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <section class="offerings-container">
             <h2 id="our-offerings-title">Our Offerings</h2>
             <section class="green-container" id="artisan-provisions">
-                <h3>Artisan <span class="break-word">Provisions</span></h3>
+                <h3>Artisan <span id="break-word-one">Provisions</span></h3>
                 <p>Hand-selected, seasonal ingredients sourced from our estate farm and trusted local growers. Each item is chosen for its freshness, flavor, and integrity.</p>
             </section>
 
             <section class="green-container" id="exclusive-dining-experience">
-                <h3>Exclusive Dining <span class="break-word">Experiences</span></h3>
+                <h3>Exclusive Dining <span id="break-word-two">Experiences</span></h3>
                 <p>Join us for intimate chef-led tastings and farm-to-table feasts, where carefully crafted menus highlight the best of the season.</p>
             </section>
 
@@ -62,7 +62,7 @@
             <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
             <div id="images">
-                <figure class="image-and-caption" id="tomatoes">
+                <figure class="image-and-caption">
                     <img        
                         src="images/tomatoes-600w.jpg" 
                         srcset="images/tomatoes-200w.jpg 1200w,
@@ -75,7 +75,7 @@
                         <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
                 </figure>
                 
-                <figure class="image-and-caption" id="olive-oil">
+                <figure class="image-and-caption">
                     <img 
                         src="images/olive-oil-600w.jpg" 
                         srcset="images/olive-oil-200w.jpg 1200w,
@@ -88,7 +88,7 @@
                         <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
                 </figure>
 
-                <figure class="image-and-caption" id="table-setting">
+                <figure class="image-and-caption">
                     <img 
                         src="images/table-setting-600w.jpg" 
                         srcset="images/table-setting-200w.jpg 1200w,
@@ -101,7 +101,7 @@
                         <figcaption>Elegant tablescape under the evening sky.</figcaption>
                 </figure>
 
-                <figure class="image-and-caption" id="chef-plating">
+                <figure class="image-and-caption">
                     <img 
                         class="image-and-caption"
                         src="images/chef-plating-600w.jpg" 
@@ -115,7 +115,7 @@
                         <figcaption>Artful plating with seasonal ingredients.</figcaption>
                 </figure>
 
-                <figure class="image-and-caption" id="basket">
+                <figure class="image-and-caption">
                     <img 
                         src="images/basket-600w.jpg" 
                         srcset="images/basket-200w.jpg 1200w,
